--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,6 @@ html body {
   border-radius: 10px 40px 40px 10px;
 }
 
-
-/* opponent stats */
-
 .opponentHealthBar {
   right: 100px;
   top: 120px;
@@ -271,6 +268,18 @@ html body {
   margin: 0 auto;
 }
 
+.finish-him {
+  position: relative;
+}
+
+.finish-him img {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 300px;
+}
 
 /* Fighter Gifs */
 
@@ -306,12 +315,7 @@ html body {
   margin-right: 20%;
 } 
 
-/* 
-.p1Stats {
-  background: red;
-  width: 480px;
-  height: 50px;
-} */
+
 
 @font-face {
   font-family: mortalKombat;
