--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
 }
 
 html body {
- height: 100%;
- background: rgb(12, 12, 12);
+  height: 100%;
+  background: rgb(12, 12, 12);
 }
 
 .splash {
@@ -37,7 +37,7 @@ html body {
   filter: drop-shadow(0px 12px 10px rgb(160, 19, 14));
   border: none;
   background: radial-gradient(ellipse at top, #700E0B, transparent),
-              radial-gradient(ellipse at bottom, #9E8C2C, transparent);
+    radial-gradient(ellipse at bottom, #9E8C2C, transparent);
   font-weight: bold;
   border-radius: 10px;
   transition: ease-in-out .3s;
@@ -164,7 +164,8 @@ html body {
   margin: 0 auto;
 }
 
-.vsP1 img, .vsP2 img {
+.vsP1 img,
+.vsP2 img {
   animation-duration: 1.1s;
 }
 
@@ -236,7 +237,7 @@ html body {
   text-shadow: 4px 5px 1px black;
 }
 
-#userHealth{
+#userHealth {
   width: 100%;
   height: 30px;
   background-color: rgb(71, 148, 74);
@@ -271,7 +272,7 @@ html body {
   text-shadow: 3px 4px 1px black;
 }
 
-#opponentHealth{
+#opponentHealth {
   width: 100%;
   height: 30px;
   background-color: rgb(71, 148, 74);
@@ -307,10 +308,42 @@ html body {
 
 #attack {
   position: absolute;
-  top: 800px;
+  top: 815px;
   left: 0;
-  right: 500px;
+  right: 0;
   margin: 0 auto;
+  width: 80px;
+  height: 30px;
+  font-size: 20px;
+  border-radius: 8px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  background: rgb(148, 34, 30);
+  transition: ease-in-out .2s;
+  animation-duration: 2s;
+  animation-delay: .9s;
+}
+
+#attack:hover {
+  background: rgb(46, 46, 46);
+}
+
+#attack:active {
+  background-color: #417cb8;
+  box-shadow: 0 5px #27496d;
+  transform: translateY(10px);
+  box-shadow: inset 3px 3px 3px 8px #27496d, inset 0 5px 30px #193047;
+}
+
+#attack:disabled {
+  background: grey;
+  cursor: not-allowed;
+}
+
+#attack:focus {
+  background: black;
 }
 
 .finish-him {
@@ -330,23 +363,23 @@ html body {
 
 #p1 {
   margin-top: 25%;
-  height: 380px; 
+  height: 380px;
   position: relative;
   display: inline-block;
   float: left;
   margin-left: 20%;
-} 
+}
 
 #p2 {
 
   margin-top: 25%;
   transform: scaleX(-1);
-  height: 380px; 
+  height: 380px;
   float: right;
   position: relative;
   display: inline-block;
   margin-right: 20%;
-} 
+}
 
 .roundEnd {
   position: relative;
